chore: add tags file to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-
 # Created by https://www.gitignore.io/api/go,macos,intellij
 # Edit at https://www.gitignore.io/?templates=go,macos,intellij
+tags
 
 ### Go ###
 # Binaries for programs and plugins
